Fix figures in bookdown

--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,9 @@ README_orig.txt
 
 !docs/figs/db_structure_ssusa.jpg
 !docs/figs/study_area.jpg
+!docs/figs/vis_wlf_time-1.png
+!docs/figs/vis_100_detect_months-1.png
+!docs/figs/vis_carnivora_months-1.png
+!docs/figs/vis_order_months-1.png
+!docs/figs/vis_wlf_human_julian-1.png
+!docs/figs/vis_wlf_human_time-1.png
